--- a/WPF_GunMayhem/MainWindow.xaml
+++ b/WPF_GunMayhem/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:WPF_GunMayhem"
         xmlns:renderer="clr-namespace:WPF_GunMayhem.Renderer"
         mc:Ignorable="d"
-        Title="Gun Mayhem" Height="450" Width="800" KeyDown="Window_KeyDown" KeyUp="Window_KeyUp" Loaded="Window_Loaded" SizeChanged="Window_SizeChanged">
+        Title="Gun Mayhem" Height="450" Width="800" KeyDown="Window_KeyDown" Loaded="Window_Loaded" SizeChanged="Window_SizeChanged">
     <Grid x:Name="grid">
         <renderer:Display x:Name="display"/>
   
